adding _redirects file to public for netlify deployement

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://swapsmagic83.github.io/Party-Time",
+  "homepage": ".",
   "name": "party-time",
   "version": "0.1.0",
   "private": true,
