--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://party-time-react.netlify.app",
   "name": "party-time",
   "version": "0.1.0",
   "private": true,
